--- a/package.json
+++ b/package.json
@@ -1,5 +1,29 @@
 {
+  "name": "kata-07-intro-typescript-sergialsina",
+  "version": "1.0.0",
+  "description": "https://fullstackopen.com/en/part9/first_steps_with_type_script#exercises-9-1-9-3",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/factoriaf5-p52/kata-07-intro-typescript-SergiAlsina.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/factoriaf5-p52/kata-07-intro-typescript-SergiAlsina/issues"
+  },
+  "homepage": "https://github.com/factoriaf5-p52/kata-07-intro-typescript-SergiAlsina#readme",
   "devDependencies": {
-    "@types/node": "^18.11.10"
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.11",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3"
   }
 }
