--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "https://fullstackopen.com/en/part9/first_steps_with_type_script#exercises-9-1-9-3",
   "main": "index.js",
   "scripts": {
-    
+    "ts-node":"ts-node",
+    "calculateBmi":"ts-node src/bmiCalculator.ts",
+    "calculateExercises":"ts-node src/exerciseCalculator.ts",
     "test": "jest"
   },
   "repository": {
